--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/iwrqtb/y513b" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/iwrqtb/p11a" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/iwrqtb/j12h" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/iwrqtb/e8o" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/iwrqtb/z4d" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/iwrqtb/e12b" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/iwrqtb/n3h" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/iwrqtb/b10x" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/iwrqtb/n9m" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/iwrqtb/i7y" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/iwrqtb/x5s" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/uknmrv/c513u" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/uknmrv/l11k" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/uknmrv/q12z" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/uknmrv/s8c" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/uknmrv/s4z" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/uknmrv/d12g" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/uknmrv/o3o" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/uknmrv/n10a" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/uknmrv/m9w" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/uknmrv/y7p" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/uknmrv/l5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg"><p align="center">华裔知名学者隐瞒千人计划 回国途中被捕</p></a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245147.md#1" title="华裔知名学者隐瞒千人计划 回国途中被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-75960147-FBI-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244653.md#1" title="美国制裁新疆公安厅和四名高官 冻结财产""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1052866522-600x400-320x200.jpg">&nbsp;</a>
@@ -13,10 +13,10 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242848.md#1" title="沈舟：FBI局长揭示中共的全面冷战渗透""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/a3-1@1200x1200-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243056.md#1" title="湖北江西现河堤溃口 千岛湖泄洪量达76西湖""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/2-11-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ttfgmz3323.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245205.md#1">陈全国被美制裁 制造多少惨案鲜为人知？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245248.md#1">【美股瞭望】拜登选情引起资本市场疑虑</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245248.md#1">【美股瞭望】拜登选情引起资本市场疑虑</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12244997.md#1">什么叫真爱国：陌生军人叠好受损国旗</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12245183.md#1">美国务院：北京应与美方就军备控制问题会谈</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -24,11 +24,11 @@
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240249.md#1">反制国安法 美权衡美元港币脱钩和制裁汇丰</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
-<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240201.md#1">湖北水库滑动变形 近2.9万民众急撤</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242490.md#1">【一线采访】北京大兴再现确诊 官方隐瞒</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242067.md#1">澳留学生亮相反共后 遭死亡威胁</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240462.md#1">四省洪水告急 江西已有近40万人受灾</a><br>
+<a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240556.md#1">61年首次 千岛湖9孔泄洪 四省或发山洪</a><br>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br>
 <br><p align="center"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12242765.md#1">被捕香港大纪元员工：遭警威胁送中活摘</a><br>
